feature: add bottom page

--- a/src/app/css/base.css
+++ b/src/app/css/base.css
@@ -1,4 +1,5 @@
 
 body {
-  font-family: FuturaNewBold-Reg, Helvetica, sans-serif;
+  font-family: FuturaNew, Helvetica, sans-serif;
+  font-weight: 600;
 }
