--- a/src/app/css/fonts.css
+++ b/src/app/css/fonts.css
@@ -1,10 +1,32 @@
 @font-face {
-  font-family: 'FuturaNewBold-Reg';
+  font-family: 'FuturaNew';
+  src: url('../fonts/FuturaNewBook-Reg.eot');
+  src: url('../fonts/FuturaNewBook-Reg.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/FuturaNewBook-Reg.woff') format('woff'),
+  url('../fonts/FuturaNewBook-Reg.woff2') format('woff2'),
+  url('../fonts/FuturaNewBook-Reg.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'FuturaNew';
+  src: url('../fonts/FuturaNewDemi-Reg.eot');
+  src: url('../fonts/FuturaNewDemi-Reg.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/FuturaNewDemi-Reg.woff') format('woff'),
+  url('../fonts/FuturaNewDemi-Reg.woff2') format('woff2'),
+  url('../fonts/FuturaNewDemi-Reg.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'FuturaNew';
   src: url('../fonts/FuturaNewBold-Reg.eot');
   src: url('../fonts/FuturaNewBold-Reg.eot?#iefix') format('embedded-opentype'),
   url('../fonts/FuturaNewBold-Reg.woff') format('woff'),
   url('../fonts/FuturaNewBold-Reg.woff2') format('woff2'),
   url('../fonts/FuturaNewBold-Reg.ttf') format('truetype');
-  font-weight: 400;
+  font-weight: 600;
   font-style: normal;
 }
+
+
