--- a/src/common/components/Steps/style.scss
+++ b/src/common/components/Steps/style.scss
@@ -39,7 +39,8 @@
   }
   &__info {
     position: relative;
-    right: .5em;
+    bottom: 4px;
+    left: 3px;
     width: 13px;
     height: 13px;
     font-size: 13px;
@@ -47,7 +48,7 @@
     background-color: $blue;
     color: white;
     text-align: center;
-    transform: translate(0, 70%);
+    display: inline-block;
   }
   &__num-cont {
     display: flex;
@@ -91,7 +92,7 @@
     &__text {
       font-size: 16px;
       line-height: 16px;
-      width: 316px;
+      width: 322px;
     }
     &__text-first {
       width: 286px;
@@ -139,6 +140,9 @@
     &__num {
       font-size: 24px;
     }
+    &__info {
+      bottom: 1px;
+    }
   }
 
   // tablet-horizontal //
@@ -154,10 +158,6 @@
     }
     .steps__text-third {
       width: 145px;
-    }
-    .steps__info {
-      right: 59px;
-      bottom: -23px;
     }
   }
   // tablet-horizontal-end //
@@ -178,10 +178,46 @@
     .steps__text-third {
       width: 115px;
     }
-    .steps__info {
-      right: 51px;
-      bottom: -35px;
-    }
   }
   // tablet-vertical-end //
 }
+
+
+// mobile //
+@media all and (max-width: 767px) {
+  .steps {
+    padding: 0 0 70px;
+    &__item-cont {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      transform: translate(0, 0);
+      position: static;
+      width: 80%;
+    }
+    &__item {
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+    }
+    &__text {
+      font-size: 12px;
+      line-height: 12px;
+      width: auto;
+      text-align: center;
+      padding-top: 11px;
+    }
+    &__info {
+      left: 3px;
+    }
+    &__num-cont {
+      width: 30px;
+      height: 30px;
+      margin: 11px 0 0 0;
+    }
+    &__num {
+      font-size: 20px;
+    }
+  }
+}
+// mobile-end //
